<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Andy Botting <andy@andybotting.com>  
    
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
     
    This file is distributed in the hope that it will be useful, but  
    WITHOUT ANY WARRANTY; without even the implied warranty of  
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU  
    General Public License for more details.  
     
    You should have received a copy of the GNU General Public License  
    along with this program.  If not, see <http://www.gnu.org/licenses/>.  
    
    This file incorporates work covered by the following copyright and  
    permission notice:

    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Tube Chaser</string>
    
    <!-- First run dialog text -->
	<string name="about_msg">Tube Chaser is an unofficial London Underground and DLR status application for Android with real-time departure information.\n\nFollow @tube_chaser on Twitter for latest updates.\n\nLatest Changes in v0.4\n\n - Support for DLR\n - Status information for Overground\n - Fixes\n\nSee the project web site at\nhttp://tubechaser.andybotting.com\n\nPlease file bug reports and feature requests from the Tube Chaser web site.\n\nDon\'t forget to enable \'Send usage stats\' in the settings and check out the results at\nhttp://tubechaser.andybotting.com/stats\n\nThanks to Google for example code and the Tango project for icons.\n\nThis application is provided with no warranty, and is licensed under GPLv3.</string>
    
    <!-- Menu item labels -->
	<string name="menu_item_refresh">Refresh</string>
	<string name="menu_item_about">About</string>
	<string name="menu_item_settings">Settings</string>
	<string name="menu_item_search">Search</string>
	<string name="menu_item_map">Map</string>

    <string name="description_logo">Tube Chaser</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_map">Map</string>
    <string name="description_refresh">Refresh</string>
    <string name="description_myloc">My Location</string>
    <string name="description_star">Star</string>
	<string name="description_status">Status</string>
	<string name="description_departures">Departures</string>
	<string name="description_stations">Stations</string>

    
    <string name="title_search_query">Search for \'<xliff:g id="query">%1$s</xliff:g>\'</string>
    <string name="search_hint">Search for Stations</string>
    	
    <string name="btn_overview">Tube\nStatus</string>
    <string name="btn_stations">Browse\nStations</string>
    <string name="btn_nearby">Nearby\nStations</string>
    <string name="btn_starred">Favourite\nStations</string>
    <string name="btn_settings">Application\nSettings</string>
    <string name="btn_search">Station\nSearch</string>
    <string name="btn_map">Tube\nMap</string>

    <string name="label_no_results">No Results</string>
    <string name="label_loading">Loading...</string>  
    <string name="label_info_unavailable">Departure information unavailable for this station.</string>  
    
    <string name="dialog_finding_stations">Finding Stations...</string>	
    <string name="dialog_error_downloading">Error obtaining departure information</string>      
    <string name="dialog_no_favourites">You currently have no favourite stations.\n\nTo add favourite station simply click the favourite star when viewing a station.\n\nDo you want to search for a station now?</string>

    
    <string name="title_settings">Tube Chaser Settings</string>
    <string name="title_favourite_stations">Favourite Stations</string>
    <string name="title_all_stations">All Stations</string>
    	
 </resources>