<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010 Andy Botting <andy@andybotting.com>  
    
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.
     
    This file is distributed in the hope that it will be useful, but  
    WITHOUT ANY WARRANTY; without even the implied warranty of  
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU  
    General Public License for more details.  
     
    You should have received a copy of the GNU General Public License  
    along with this program.  If not, see <http://www.gnu.org/licenses/>.  
    
    This file incorporates work covered by the following copyright and  
    permission notice:

    Copyright 2010 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout style="@style/TitleBar">
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_home"
            android:src="@drawable/ic_title_home"
            android:onClick="onHomeClick" />

        <ImageView style="@style/TitleBarSeparator" />
        
        <TextView style="@style/TitleBarText" />
        
		<ImageView style="@style/TitleBarSeparator" />
        
        <ImageButton style="@style/TitleBarAction"
            android:id="@+id/btn_title_refresh"
            android:contentDescription="String2"
            android:src="@drawable/ic_title_refresh"
            android:onClick="onRefreshClick" />
            
        <ProgressBar style="@style/TitleBarProgressIndicator"
            android:id="@+id/title_refresh_progress"
            android:visibility="gone" />

        <ImageView style="@style/TitleBarSeparator" />
        
        <ImageButton style="@style/TitleBarAction"
            android:contentDescription="@string/description_map"
            android:src="@drawable/ic_title_map"
            android:onClick="onMapClick" />
    </LinearLayout>
    
    
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@+id/list_item_station"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    style="@style/HeaderItem">

	    <CheckBox
	        android:id="@+id/star_button"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:focusable="false"
	        android:contentDescription="@string/description_star"
	        android:button="@android:drawable/btn_star" />
	        
	    <TextView
	        android:id="@+id/station_name"
	        android:layout_toLeftOf="@id/star_button"
	        android:layout_alignParentLeft="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        style="@style/Title" />
	        
	    <TextView
	        android:id="@+id/station_lines"
	        android:layout_below="@id/station_name"
	        android:layout_toLeftOf="@id/star_button"
	        android:layout_alignParentLeft="true"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        style="@style/Subtitle" />
	        			
	</RelativeLayout>
	
	<ImageView android:id="@+id/divider" 
		android:layout_width="fill_parent"
		android:layout_height="1px"
		android:background="@drawable/list_divider" />
	

	<!-- Empty  -->
	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:id="@id/android:empty"
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent">
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
            android:textSize="@dimen/text_size_small"
			android:text="@string/label_no_results" />
	</RelativeLayout>
    
    <!-- Results list -->
	<ExpandableListView android:id="@android:id/list"
		android:layout_width="fill_parent" 
        android:layout_height="fill_parent"
		android:drawSelectorOnTop="false"
		android:divider="@android:color/transparent" />

	<!-- Loading Spinner -->
	<LinearLayout
        android:id="@+id/departures_loading"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
        android:gravity="center">
        
        <ProgressBar
            style="?android:attr/progressBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="6dip"
            android:indeterminate="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/label_loading" />
            
    </LinearLayout>


</LinearLayout>
